package JavaStudy.Study01_工厂模式.S1_简单工厂模式;

/**
 * @author
 * @version 1.0
 * @created 2019/5/17 下午3:55
 **/
public class PorductB implements Porduct {
    public void createCar() {
        System.out.println("car b");
    }
}